--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Країни з першою "З"</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
-    </style>
+    <link rel="stylesheet" href="./src/style.css">
 </head>
 <body>
 <div class="container">
@@ -25,6 +22,6 @@
 
 <div id="output2" class="output2"></div>
 
-<script src="../dist/script.js"></script>
+<script src="./dist/script.js"></script>
 </body>
 </html>
